Split Reflections